# gitlab-dashboard

./: .app_prop_sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sider.yml
.github/workflows/: unit-test.yml
src/: __init__.py  main.py
src/common/: Const.py  GitlabConst.py  Logger.py  __init__.py  errors.py  util.py
src/repository/: __init__.py  mapper.py
src/service/: __init__.py  issue.py  mergerequest.py  project.py
src/view/: __init__.py  issue.py  mergerequest.py  util.py
tests/: conftest.py  mock_classes.py
tests/common/: test_logger.py  test_util.py
tests/repository/: test_mapper.py
tests/service/: test_issue.py  test_mergerequest.py  test_project.py
